--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ ext {
 
 dependencies {
 	implementation 'org.modelmapper:modelmapper:3.1.1'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.mongodb:mongodb-driver-sync'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
