--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     url: jdbc:mysql://localhost:3306/sections?serverTimezone=Asia/Seoul
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     generate-ddl: true
     show-sql: 'true'
     properties:
