--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 spring:
   data:
+    web:
+      pageable:
+        default-page-size: 3
+        default-page: 1
     mongodb:
       host: localhost
       port: 27017
