--- a/.github/workflows/git-action.yml
+++ b/.github/workflows/git-action.yml
@@ -8,8 +8,8 @@
 name: CI/CD
 
 on:
-  push:
-    branches: [ "main", "develop" ]
+#   push:
+#     branches: [ "main", "develop" ]
   pull_request:
     types: [closed]
     branches: [ "main", "develop" ]
