[CREATE] #BTS-168 : Axon Framework 이벤트 소싱에 의해 Axon Server Event Store 저장되도록 설정
- 이벤트가 발생하면 Axon Server Event Store에 NovelCards가 저장됩니다.

--- a/build.gradle
+++ b/build.gradle
@@ -25,16 +25,18 @@ ext {
 dependencies {
 	implementation 'org.modelmapper:modelmapper:3.1.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 	implementation 'org.mongodb:mongodb-driver-sync'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+//	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.axonframework:axon-spring-boot-starter:4.7.3'
 }
 
 dependencyManagement {
