[UPDATE] #BTS-168 : gitignore axonserver 파일들 추가

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+/axonserver-events
+/axonserver-data
 
 ### NetBeans ###
 /nbproject/private/
